<resources>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_search">Search</string>

    <string name="app_error_dialog_title">Johl\'s Error</string>
    <string name="app_load_data_progress_title">Load Data</string>
    <string name="app_name">Johl\'s</string>
    <string name="app_tagline">The Home of Smart Shopping</string>
    <string name="app_version">Version %1$s Build %2$d</string>

    <string name="contact_by_email">By Email</string>
    <string name="contact_by_phone">By Phone</string>
    <string name="contact_email_body">Type in your question or comment here</string>
    <string name="contact_email_error">Error starting email app.</string>
    <string name="contact_email_subject">Request For Assistance</string>
    <string name="contact_email_to">info@johls.com</string>
    <string name="contact_intent_title">Send mail &#8230;</string>
    <string name="contact_message">Your questions and concerns are important to us. We are available by phone, email, or at any store.</string>
    <string name="contact_no_email_client">Unable to find an email client!</string>

    <string name="deal_sale_price">Sale Price: %.2f</string>
    <string name="deal_shop_departments">Shop by Department</string>
    <string name="deal_original_price">Original Price: %.2f</string>

    <string name="inventory_no_matches">No inventory found for that search</string>
    <string name="inventory_product_id">Product ID: %d</string>
    <string name="inventory_quantity">Quantity: %d</string>
    <string name="inventory_running_query">Searching for matching inventory &#8230;</string>
    <string name="inventory_store_id">Store ID: %d</string>

    <string name="iv_companyImage">Image of Johl\'s</string>
    <string name="iv_dealImage">Image of the product on sale</string>
    <string name="iv_drawerItemImage">Image of the menu item</string>
    <string name="iv_orderImage">Image of Johl\'s</string>
    <string name="iv_product_image">Image of product</string>

    <string name="load_customers">Fetching customer records &#8230;</string>
    <string name="load_departments">Fetching department records &#8230;</string>
    <string name="load_inventory">Fetching inventory records &#8230;</string>
    <string name="load_orders">Fetching order records &#8230;</string>
    <string name="load_order_details">Fetching order detail records &#8230;</string>
    <string name="load_products">Fetching product records &#8230;</string>
    <string name="load_promotions">Fetching promotion records &#8230;</string>
    <string name="load_stores">Fetching store records &#8230;</string>

    <string name="login_current_user">Current Customer</string>
    <string name="login_not_logged_in">** not logged in **</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_success">Successfully logged in</string>
    <string name="login_unknown_user">The ID you entered does not match a registered customer</string>
    <string name="login_user_id_hint">User ID</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="notification_title">%s Department Promotion</string>
    <string name="notification_message">%1$s discounted by %2$s percent</string>

    <string name="order_id">Order: %d</string>
    <string name="order_no_orders">No orders found</string>
    <string name="order_num_additional">+ %d more products</string>
    <string name="order_price">Total Price: %.2f</string>

    <string name="product_not_found">A product with ID of %d was not found.</string>

    <string name="search_hint">Search in stores and online</string>

    <string name="settings_enable_notifications">Enable notifications:</string>
    <string name="settings_my_store">My store:</string>
    <string name="settings_notification_interval">Notification interval:</string>
    <string name="settings_user_not_logged_in">[no user logged in]</string>

    <string name="store_not_selected">Select a store</string>

    <string name="title_about_fragment">About</string>
    <string name="title_contact_fragment">Contact Us</string>
    <string name="title_deals_fragment">Promotions</string>
    <string name="title_home_fragment">Home</string>
    <string name="title_inventory_fragment">Inventory</string>
    <string name="title_login_fragment">Login</string>
    <string name="title_orders_fragment">Orders</string>
    <string name="title_settings_fragment">Settings</string>

    <string-array name="notification_intervals">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
    </string-array>

</resources>
