<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="30dp"
             tools:context="com.redhat.iot.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settingsTextView"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/title_settings_fragment"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_enable_notifications"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <CheckBox
                android:id="@+id/settingsEnableNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_notification_interval"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/settingsNotificationInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/notification_intervals"
                android:prompt="@string/settings_notification_interval"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
